--- a/app/views/dca_text/_collections.html.erb
+++ b/app/views/dca_text/_collections.html.erb
@@ -1,5 +1,6 @@
 <h2>Explore Featured Exhibits & Collections</h2>
-<p>By default, Bootstrap's thumbnails are designed to showcase linked images with minimal required markup.</p>
+
+<p>Do we want to talk about the number of collections to start with? Maybe 3 instead of 6?</p>
 <ul class="thumbnails">
   <li class="span3">
     <div class="thumbnail">
@@ -8,71 +9,11 @@
       <div class="caption">
         <h5>Karate & Ice Cream</h5>
 
-        <p>See etchings and more...</p>
+        <p>Pecans and Peanuts</p>
 
         <p><a href="#" class="btn primary">Go</a></p>
       </div>
     </div>
-
-  </li>
-
-  <li class="span3">
-    <div class="thumbnail">
-      <img src="http://placehold.it/260x180" alt="">
-
-      <div class="caption">
-        <h5>News Information</h5>
-
-        <p>Journalism and manuscripts</p>
-
-        <p><a href="#" class="btn primary">Go</a></p>
-      </div>
-    </div>
-
-  </li>
-
-  <li class="span3">
-    <div class="thumbnail">
-      <img src="http://placehold.it/260x180" alt="">
-
-      <div class="caption">
-        <h5>Crazy Posters from the 70s</h5>
-
-        <p>Lava lamps and bell bottoms</p>
-
-        <p><a href="#" class="btn primary">Go</a></p>
-      </div>
-    </div>
-
-  </li>
-
-  <li class="span3">
-    <div class="thumbnail">
-      <img src="http://placehold.it/260x180" alt="">
-
-      <div class="caption">
-        <h5>WW2 Photograph Collection</h5>
-
-        <p>Amazing historical examples</p>
-
-        <p><a href="#" class="btn primary">Go</a></p>
-      </div>
-    </div>
-
-  </li>
-  <li class="span3">
-    <div class="thumbnail">
-      <img src="http://placehold.it/260x180" alt="">
-
-      <div class="caption">
-        <h5>Ancient Musical Manuscripts</h5>
-
-        <p>800 years old and more...</p>
-
-        <p><a href="#" class="btn primary">Go</a></p>
-      </div>
-    </div>
-
   </li>
   <li class="span3">
     <div class="thumbnail">
@@ -81,12 +22,30 @@
       <div class="caption">
         <h5>Maps of Boston streets</h5>
 
-        <p>See cow paths turned tiny streets.</p>
+        <p>Still, no street signs.</p>
 
         <p><a href="#" class="btn primary">Go</a></p>
       </div>
     </div>
-
   </li>
+  <li class="span3">
+    <div class="thumbnail">
+      <img src="http://placehold.it/260x180" alt="">
 
+      <div class="caption">
+        <h5>Etchings & Rascals!</h5>
+
+        <p>Circus Parades!</p>
+
+        <p><a href="#" class="btn primary">Go</a></p>
+      </div>
+    </div>
+  </li>
 </ul>
+<div class="pull-right"><a href="#">View more featured exhibits!</a></div>
+<br/>
+
+<h2>Maintenance</h2>
+
+<p>Upgrades to the Tufts Digital Library are schedule for THursday, 9 - 9:30 AM. The digital library may not be
+  available during this time.</p>
