--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -10,6 +10,7 @@
     <!-- Le styles -->
     <link href="/assets/css/bootstrap.css" rel="stylesheet">
     <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/assets/css/facets.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -39,7 +40,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', end
        -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
        box-shadow: 0 1px 2px rgba(0,0,0,.15);
      }
-@media (min-width: 499px) and (max-width: 799px) {
+@media (min-width: 400px) and (max-width: 799px) {
 {.container > .content {
     background-color: #FFFFFF;
     border-bottom-left-radius: 6px;
@@ -60,10 +61,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', end
      </style>
 
     <link rel="shortcut icon" href="/assets/ico/favicon.ico">
-  <!--  <link rel="apple-touch-icon" href="/assets/ico/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/ico/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/ico/apple-touch-icon-114x114.png">
-      -->
     <%= raw(render_head_content) %>
 </head>
 <body data-spy="scroll" data-target=".subnav" data-offset="50">
@@ -74,16 +71,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', end
 <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
             <!--   <a class="brand" href="./index.html">Tufts Digital Library</a> -->
             <div class="nav-collapse">
                 <ul class="nav">
                     <li><%= link_to "Search", '/search'%></li>
- <!--                   <li><a href="#browse">Browse</a></li> -->
                     <li><%= link_to "About", about_path()%></li>
                     <li><%= link_to "Contact", contact_path()%></li>
                     <li><%= link_to "Home", catalog_path('/')%></li>
@@ -112,6 +103,26 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', end
 
 </div><!-- /container -->
 
+<script type="text/javascript">
+
+	$('.toggle:not(.toggle-open)') .addClass('toggle-closed') .parents('li') .children('ul') .hide();
+
+	if($.browser.msie){
+		$('#menu ul.navmenu li:last-child .menutop') .css('border-bottom','1px solid #CCC');
+	}
+
+	$('.toggle').click(function(){
+		if ($(this).hasClass('toggle-open')) {
+			$(this).removeClass('toggle-open') .addClass('toggle-closed') .empty('') .append('+') .parents('li') .children('ul') .slideUp(250);
+			$(this).parent('.menutop') .removeClass('menutop-open') .addClass('menutop-closed');
+		}else{
+			$(this).parent('.menutop') .removeClass('menutop-closed') .addClass('menutop-open');
+			$(this).removeClass('toggle-closed') .addClass('toggle-open') .empty('') .append('&ndash;') .parents('li') .children('ul') .slideDown(250);
+		}
+
+								 })
+
+</script>
 
 
     <!-- Le javascript
