--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -92,6 +92,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', end
 
 
         <%= link_to(image_tag('/assets/img/tuftsdigitallibrarylogosmall.png',:alt=> "Tufts Digital Library logo"), catalog_path('/'), :class=>"work") %>
+        <%- if "show" == @current_action -%>
+        <button href="#" class="btn btn-warning pull-right"> Comments about this page? <i class="icon-comment icon-white"></i></button>
+        <%- end -%>
 
       </div>
 
