--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -1,67 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title><%= h(@page_title || application_name) %></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <title><%= h(@page_title || application_name) %></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <!-- Le styles -->
-    <link href="/assets/css/bootstrap.css" rel="stylesheet">
-    <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="/assets/css/facets.css" rel="stylesheet">
+  <!-- Le styles -->
+  <link href="/assets/css/bootstrap.css" rel="stylesheet">
+  <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="/assets/css/facets.css" rel="stylesheet">
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+  <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+  <!--[if lt IE 9]>
+  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 
-    <!-- Le fav and touch icons -->
+  <!-- Le fav and touch icons -->
   <style type="text/css">
-     /* Override some defaults */
-     html, body {background: rgb(206,220,231); /* Old browsers */
-background: -moz-radial-gradient(center, ellipse cover,  rgba(206,220,231,1) 0%, rgba(89,106,114,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(206,220,231,1)), color-stop(100%,rgba(89,106,114,1))); /* Chrome,Safari4+ */
-background: -webkit-radial-gradient(center, ellipse cover,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-radial-gradient(center, ellipse cover,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* Opera 12+ */
-background: -ms-radial-gradient(center, ellipse cover,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* IE10+ */
-background: radial-gradient(center, ellipse cover,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', endColorstr='#596a72',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-  }
-.container > .content {
-       background-color: #fff;
-       padding: 10px 20px 20px 20px;
-       margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-       -webkit-border-radius: 0 0 6px 6px;
-       -moz-border-radius: 0 0 6px 6px;
-        border-radius: 0 0 6px 6px;
-       -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-       -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-       box-shadow: 0 1px 2px rgba(0,0,0,.15);
-     }
-@media (min-width: 400px) and (max-width: 799px) {
-{.container > .content {
-    background-color: #FFFFFF;
-    border-bottom-left-radius: 6px;
-    border-bottom-right-radius: 6px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-    margin-bottom: 0;
-    margin-left: -20px;
-    margin-right: -20px;
-   margin-top: -20px;
-    padding-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-}
-}
-     </style>
+          /* Override some defaults */
+      html, body {
+          background: rgb(206, 220, 231); /* Old browsers */
+          background: -moz-radial-gradient(center, ellipse cover, rgba(206, 220, 231, 1) 0%, rgba(89, 106, 114, 1) 100%); /* FF3.6+ */
+          background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(206, 220, 231, 1)), color-stop(100%, rgba(89, 106, 114, 1))); /* Chrome,Safari4+ */
+          background: -webkit-radial-gradient(center, ellipse cover, rgba(206, 220, 231, 1) 0%, rgba(89, 106, 114, 1) 100%); /* Chrome10+,Safari5.1+ */
+          background: -o-radial-gradient(center, ellipse cover, rgba(206, 220, 231, 1) 0%, rgba(89, 106, 114, 1) 100%); /* Opera 12+ */
+          background: -ms-radial-gradient(center, ellipse cover, rgba(206, 220, 231, 1) 0%, rgba(89, 106, 114, 1) 100%); /* IE10+ */
+          background: radial-gradient(center, ellipse cover, rgba(206, 220, 231, 1) 0%, rgba(89, 106, 114, 1) 100%); /* W3C */
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#cedce7', endColorstr = '#596a72', GradientType = 1); /* IE6-9 fallback on horizontal gradient */
+      }
 
-    <link rel="shortcut icon" href="/assets/ico/favicon.ico">
-    <%= raw(render_head_content) %>
+      .container > .content {
+          background-color: #fff;
+          padding: 10px 20px 20px 20px;
+          margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
+          -webkit-border-radius: 0 0 6px 6px;
+          -moz-border-radius: 0 0 6px 6px;
+          border-radius: 0 0 6px 6px;
+          -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
+          -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
+          box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
+      }
+
+      @media (min-width: 400px) and (max-width: 799px) {
+
+      {
+      .container > .content {
+                  background-color:   #FFFFFF;
+                  border-bottom-left-radius:   6px;
+                  border-bottom-right-radius:   6px;
+                  border-top-left-radius:   0;
+                  border-top-right-radius:   0;
+                  box-shadow:   0 1px 2px rgba(0, 0, 0, 0.15);
+                  margin-bottom:   0;
+                  margin-left:   -20px;
+                  margin-right:   -20px;
+                margin-top: -20px;
+                  padding-bottom:   20px;
+                  padding-left:   20px;
+                  padding-right:   20px;
+                  padding-top:   10px;
+      }
+
+          }
+  </style>
+
+  <link rel="shortcut icon" href="/assets/ico/favicon.ico">
+  <%= raw(render_head_content) %>
 </head>
 <body data-spy="scroll" data-target=".subnav" data-offset="50">
 
@@ -69,84 +75,90 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', end
 <!-- Navbar
 ================================================== -->
 <div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <!--   <a class="brand" href="./index.html">Tufts Digital Library</a> -->
-            <div class="nav-collapse">
-                <ul class="nav">
-                    <li><%= link_to "Search", '/search'%></li>
-                    <li><%= link_to "About", about_path()%></li>
-                    <li><%= link_to "Contact", contact_path()%></li>
-                    <li><%= link_to "Home", catalog_path('/')%></li>
-                </ul>
-            </div>
-        </div>
+  <div class="navbar-inner">
+    <div class="container">
+      <!--   <a class="brand" href="./index.html">Tufts Digital Library</a> -->
+      <div class="nav-collapse">
+        <ul class="nav">
+          <li><%= link_to "Search", '/search' %></li>
+          <li><%= link_to "About", about_path() %></li>
+          <li><%= link_to "Contact", contact_path() %></li>
+          <li><%= link_to "Home", catalog_path('/') %></li>
+        </ul>
+      </div>
     </div>
-    <!-- <%= render :partial=>'/user_util_links' %>      -->
+  </div>
+  <!-- <%= render :partial => '/user_util_links' %>      -->
 </div>
 
 <div class="container">
-    <div class="content">
-      <!-- HEADER -->
-      <div class="page-header">
+  <div class="content">
+    <!-- HEADER -->
+    <div class="page-header">
 
 
-        <%= link_to(image_tag('/assets/img/tuftsdigitallibrarylogosmall.png',:alt=> "Tufts Digital Library logo"), catalog_path('/'), :class=>"work") %>
-        <%- if "show" == @current_action -%>
-        <button href="#" class="btn btn-warning pull-right"> Comments about this page? <i class="icon-comment icon-white"></i></button>
-        <%- end -%>
+      <%= link_to(image_tag('/assets/img/tuftsdigitallibrarylogosmall.png', :alt => "Tufts Digital Library logo"), catalog_path('/'), :class => "work") %>
+      <%- if "show" == @current_action -%>
+          <button href="#" class="btn btn-warning pull-right"> Comments about this page?
+            <i class="icon-comment icon-white"></i></button>
+      <%- end -%>
 
-      </div>
-
-
-      <%= render :partial=>'/flash_msg' %>
-      <%= yield %>
     </div>
-    <%= render :partial=>'shared/footer' %>
 
-</div><!-- /container -->
+
+    <%= render :partial => '/flash_msg' %>
+    <%= yield %>
+  </div>
+  <%= render :partial => 'shared/footer' %>
+
+</div>
+<!-- /container -->
 
 <script type="text/javascript">
 
-	$('.toggle:not(.toggle-open)') .addClass('toggle-closed') .parents('li') .children('ul') .hide();
+    $('.toggle:not(.toggle-open)').addClass('toggle-close').parents('li').children('ul').hide();
+    $('.menutop:not(.toggle-open)').addClass('toggle-close').parents('li').children('ul').hide();
 
-	if($.browser.msie){
-		$('#menu ul.navmenu li:last-child .menutop') .css('border-bottom','1px solid #CCC');
-	}
+    if ($.browser.msie) {
+        $('#menu ul.navmenu li:last-child .menutop').css('border-bottom', '1px solid #CCC');
+    }
 
-	$('.toggle').click(function(){
-		if ($(this).hasClass('toggle-open')) {
-			$(this).removeClass('toggle-open') .addClass('toggle-closed') .empty('') .append('+') .parents('li') .children('ul') .slideUp(250);
-			$(this).parent('.menutop') .removeClass('menutop-open') .addClass('menutop-closed');
-		}else{
-			$(this).parent('.menutop') .removeClass('menutop-closed') .addClass('menutop-open');
-			$(this).removeClass('toggle-closed') .addClass('toggle-open') .empty('') .append('&ndash;') .parents('li') .children('ul') .slideDown(250);
-		}
-
-								 })
+    $('.toggle,.menutop').click(function () {
+        var facet_header = $(this);
+        if (facet_header.hasClass('toggle-open')) {
+            facet_header.closest('.menutop').removeClass('menutop-open').addClass('menutop-closed');
+            facet_header.removeClass('toggle-open').addClass('toggle-closed').parents('li').children('ul').slideUp(250);
+            facet_header.parent().find('.toggle_icon').empty('').append('+');
+        }
+        else {
+            facet_header.closest('.menutop').removeClass('menutop-closed').addClass('menutop-open');
+            facet_header.removeClass('toggle-closed').addClass('toggle-open').parents('li').children('ul').slideDown(250);
+            facet_header.parent().find('.toggle_icon').empty('').append('&ndash;');
+        }
+    })
 
 </script>
 
 
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
-    <script src="/assets/js/jquery.js"></script>
-    <script src="/assets/js/google-code-prettify/prettify.js"></script>
-    <script src="/assets/js/bootstrap-transition.js"></script>
-    <script src="/assets/js/bootstrap-alert.js"></script>
-    <script src="/assets/js/bootstrap-modal.js"></script>
-    <script src="/assets/js/bootstrap-dropdown.js"></script>
-    <script src="/assets/js/bootstrap-scrollspy.js"></script>
-    <script src="/assets/js/bootstrap-tab.js"></script>
-    <script src="/assets/js/bootstrap-tooltip.js"></script>
-    <script src="/assets/js/bootstrap-popover.js"></script>
-    <script src="/assets/js/bootstrap-button.js"></script>
-    <script src="/assets/js/bootstrap-collapse.js"></script>
-    <script src="/assets/js/bootstrap-carousel.js"></script>
-    <script src="/assets/js/bootstrap-typeahead.js"></script>
-    <script src="/assets/js/application.js"></script>
+<!-- Le javascript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+<script src="/assets/js/jquery.js"></script>
+<script src="/assets/js/google-code-prettify/prettify.js"></script>
+<script src="/assets/js/bootstrap-transition.js"></script>
+<script src="/assets/js/bootstrap-alert.js"></script>
+<script src="/assets/js/bootstrap-modal.js"></script>
+<script src="/assets/js/bootstrap-dropdown.js"></script>
+<script src="/assets/js/bootstrap-scrollspy.js"></script>
+<script src="/assets/js/bootstrap-tab.js"></script>
+<script src="/assets/js/bootstrap-tooltip.js"></script>
+<script src="/assets/js/bootstrap-popover.js"></script>
+<script src="/assets/js/bootstrap-button.js"></script>
+<script src="/assets/js/bootstrap-collapse.js"></script>
+<script src="/assets/js/bootstrap-carousel.js"></script>
+<script src="/assets/js/bootstrap-typeahead.js"></script>
+<script src="/assets/js/application.js"></script>
 
 
 </body>
