--- a/app/views/tufts_audio_texts/_show.html.erb
+++ b/app/views/tufts_audio_texts/_show.html.erb
@@ -1,5 +1,5 @@
-<% javascript_includes << ['custom', {:plugin=>:hydra_repository, :media=>"all"}] %>
-<% javascript_includes << ["catalog/show", {:plugin=>:hydra_repository, :media=>"all"}] %>
+<% javascript_includes << ['custom', {:plugin => :hydra_repository, :media => "all"}] %>
+<% javascript_includes << ["catalog/show", {:plugin => :hydra_repository, :media => "all"}] %>
 <% javascript_includes << "yahooMediaPlayer.js" %>
 <% javascript_includes << "audio/audio_player.js" %>
 <% javascript_includes << "audio/transcript_scroller.js" %>
@@ -7,34 +7,34 @@
 <% javascript_includes << "feedback.js" %>
 <% stylesheet_links << "feedback/feedback.css" %>
 
-        <div class="document_viewer" id="cover_container">
-          <%= showMetadataItem("Creator", "creator", :creator) %>
-          <%= showMetadataItem("Source", "source2", :source2) %>
-          <%= showMetadataItem("Description", "description", :description) %>
-          <%= showMetadataItem("Date Created", "dateCreated", :dateCreated) %>
-          <%= showMetadataItem("Date Available", "dateAvailable", :dateAvailable) %>
-          <%= showMetadataItem("Date Issued", "dateIssued", :dateIssued) %>
-          <%= showMetadataItem("Citable URL", "identifier", :identifier) %>
-          <%= showMetadataItem("Rights", "rights", :rights) %>
-          <%= showMetadataItem("Citation", "bibliographicCitation", :bibliographicCitation) %>
-          <%= showMetadataItem("Publisher", "publisher", :publisher) %>
-          <%= showMetadataItem("Type", "type2", :type2) %>
-          <%= showMetadataItem("Format", "format2", :format2) %>
-          <%= showMetadataItem("Person Name", "persname", :persname) %>
-          <%= showMetadataItem("Organizations", "corpname", :corpname) %>
-          <%= showMetadataItem("Places", "geogname", :geogname) %>
-          <%= showMetadataItem("Topics", "subject", :subject) %>
-          <%= showMetadataItem("Funder", "funder", :funder) %>
-          <%= showMetadataItem("Temporal", "temporal", :temporal) %>
-          <%= showMetadataItem("Resolution", "resolution", :resolution) %>
-          <%= showMetadataItem("Bit Depth", "bitDepth", :bitDepth) %>
-          <%= showMetadataItem("Color Space", "colorSpace", :colorSpace) %>
-          <%= showMetadataItem("File Size", "filesize", :filesize) %>
-          <%= showFeedbackForm(params[:id]) %>
-        </div>
-        <div>
-          <%= showAudioPlayer(params[:id]) %>
-        </div>
-        <div id="transcript">
-          <%= showTranscriptFromDatastream("ARCHIVAL_XML") %>
-        </div> <!-- id="transcript" -->
+<div class="document_viewer" id="cover_container">
+  <%= showMetadataItem("Creator", "creator", :creator) %>
+  <%= showMetadataItem("Source", "source2", :source2) %>
+  <%= showMetadataItem("Description", "description", :description) %>
+  <%= showMetadataItem("Date Created", "dateCreated", :dateCreated) %>
+  <%= showMetadataItem("Date Available", "dateAvailable", :dateAvailable) %>
+  <%= showMetadataItem("Date Issued", "dateIssued", :dateIssued) %>
+  <%= showMetadataItem("Citable URL", "identifier", :identifier) %>
+  <%= showMetadataItem("Rights", "rights", :rights) %>
+  <%= showMetadataItem("Citation", "bibliographicCitation", :bibliographicCitation) %>
+  <%= showMetadataItem("Publisher", "publisher", :publisher) %>
+  <%= showMetadataItem("Type", "type2", :type2) %>
+  <%= showMetadataItem("Format", "format2", :format2) %>
+  <%= showMetadataItem("Person Name", "persname", :persname) %>
+  <%= showMetadataItem("Organizations", "corpname", :corpname) %>
+  <%= showMetadataItem("Places", "geogname", :geogname) %>
+  <%= showMetadataItem("Topics", "subject", :subject) %>
+  <%= showMetadataItem("Funder", "funder", :funder) %>
+  <%= showMetadataItem("Temporal", "temporal", :temporal) %>
+  <%= showMetadataItem("Resolution", "resolution", :resolution) %>
+  <%= showMetadataItem("Bit Depth", "bitDepth", :bitDepth) %>
+  <%= showMetadataItem("Color Space", "colorSpace", :colorSpace) %>
+  <%= showMetadataItem("File Size", "filesize", :filesize) %>
+  <%= raw Tufts::FeedbackMethods.show_feedback_form(params[:id], form_authenticity_token) %>
+</div>
+<div>
+  <%= raw Tufts::AudioMethods.show_audio_player(params[:id]) %>
+</div>
+<div id="transcript">
+  <%= raw Tufts::AudioMethods.show_transcript(@document_fedora) %>
+</div> <!-- id="transcript" -->
