adding in the request lareger image link

--- a/app/views/tufts_images/_show.html.erb
+++ b/app/views/tufts_images/_show.html.erb
@@ -9,7 +9,7 @@
 
   <ul class="nav nav-pills pull-right">
     <li><a href="#plugins"><i class="icon-picture"/></i> Download JPG Image</a></li>
-    <li><a href="#variables"><i class="icon-envelope"/></i>  Request Larger Image</a></li>
+    <li><a href="http://sites.tufts.edu/dca/research-help/image-requests/"><i class="icon-envelope"/></i>  Request Larger Image</a></li>
 
   </ul>
 </div>
