Second batch of changes for EAD content -- a few more sections are shown, without styles.

--- a/app/views/tufts_eads/_show.html.erb
+++ b/app/views/tufts_eads/_show.html.erb
@@ -35,5 +35,6 @@
           <%= raw Tufts::EADMethods.show_hist_biog_note(@document_fedora) %>
           <%= raw Tufts::EADMethods.show_scope_content(@document_fedora) %>
           <%= raw Tufts::EADMethods.show_access_use(@document_fedora) %>
+          <%= raw Tufts::EADMethods.show_series_description(@document_fedora) %>
           <%= raw Tufts::EADMethods.show_item_list(@document_fedora) %>
         </div> <!-- id="ead_content" -->
