--- a/app/views/catalog/eadoverview.html.erb
+++ b/app/views/catalog/eadoverview.html.erb
@@ -4,5 +4,5 @@
 <% stylesheet_links << "feedback/feedback.css" %>
 
         <div id="ead_content">
-          <%= raw Tufts::EADMethods.show_landing_page(@document_fedora) %>
+          <%= raw Tufts::EADMethods.show_overview_page(@document_fedora) %>
         </div> <!-- ead_content -->
