initial pass at about content needs to broken up to be more managable for dca

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,2 +1,92 @@
-<h1>About#index</h1>
-<p>Find me in app/views/about/index.html.erb</p>
+<%= render :partial => 'shared/search_bar' %>
+
+<!-- LEFT SIDE/ FOR FLUID COLUMN TITLE ROW -->
+<div class="row-fluid">
+  <div class="span12">
+  </div>
+
+  <!-- nested row LEFT -->
+  <div class="row-fluid">
+
+    <div class="span3"><p><h6></h6></p>
+
+    </div>
+
+
+    <!-- nested Fluid RIGHT -->
+    <div class="row">
+      <div class="span7">
+        <h2>The Tufts Digital Library</h2>
+
+        <p>The <a href="http://dl.tufts.edu/">Tufts Digital Library</a> (TDL) is a set of collections and services
+          administered by Digital Collections and Archives in collaboration with
+          <a href="http://uit.tufts.edu/at/">UIT Academic Technology (AT)</a>. TDL collections support teaching and
+          research at Tufts University and feature digital resources created by members of the Tufts community of
+          enduring value. Not all materials in the TDL are made available to the public. While many resources in the TDL
+          are part of the DCA&#8217;s permanent collections, some are stored under the terms of our
+          <a href="/dca/services/tufts-digital-library-and-associated-services/long-term-storage-services/">long-term
+            storage services</a>.</p>
+
+        <h2>Introduction</h2>
+
+        <p>DCA and AT, using the Tufts Digital Library, provide services for the preservation of and access to digital
+          assets created in support of Tufts&#8217; teaching and research mission. Core services include:</p>
+        <ul>
+          <li>Secure long-term storage</li>
+          <li>Management of digital assets</li>
+          <li>Preservation policies and procedures</li>
+          <li>Discovery and retrieval</li>
+        </ul>
+        <p>Additional services are available, including:</p>
+        <ul>
+          <li>Development of access tools and interfaces</li>
+          <li>Consultation on digital asset creation</li>
+        </ul>
+        <h2>History and Management</h2>
+
+        <p>Since 2003, DCA and AT have collaborated on the implementation of the Tufts Digital Library, a digital
+          preservation system based on the Fedora Commons Repository architecture. The Tufts Digital Library is a
+          centrally-managed preservation and access system for digital content of enduring value created at Tufts and/or
+          by members of the Tufts community, its affiliates, and allied organizations. The TDL&#8217;s backend
+          architecture is built around Fedora Commons Repository, an open-source digital repository management system.
+          The user interface is developed by AT in conjunction with design specifications from DCA. Services include
+          long-term and archival storage of digital objects, as well as public access where appropriate.</p>
+
+        <p>Collection policies and criteria for deposit are set by the DCA. Management of the system&#8217;s software,
+          hardware, and applications is shared between the DCA and AT. As stewards of the TDL, DCA provides services and
+          support to faculty, staff, students, and associated institutions who use the TDL&#8217;s materials or create
+          and contribute content. </p>
+
+        <h2>Repository Program Partners</h2>
+        <ul>
+          <li><a href="http://uit.tufts.edu/at/">UIT Academic Technology</a></li>
+          <li><a href="/dca/">Digital Collections and Archives</a></li>
+        </ul>
+        <h2>Additional Questions</h2>
+
+        <p>If you&#8217;d like to report an error in content, display, or function; if you&#8217;d like to comment on
+          your TDL experience; for information about contributing content to the TDL; for information about developing
+          tools using the TDL&#8217;s software; or for device about developing projects which use and can be supported
+          by the TDL, please <a href="/dca/research-help/hours-and-directions/">contact DCA</a>.</p>
+      </div>
+      <div id="breadcrumbdivider">&nbsp;</div>
+
+
+    </div>
+
+    <div class="span9">
+
+
+    </div>
+
+
+    <br/>
+  </div>
+  <div class="row">
+    <div class="span7 offset3">
+
+
+    </div>
+  </div>
+</div>
+</div>
