latest changes from cole

--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -10,14 +10,17 @@
 
     <%= render :partial => 'facet_nav' %>
     <!-- nested Fluid RIGHT -->
-    <div class="row-fluid">
+    <div class="row">
       <!-- MAIN CONTENT AREA -->
       <div class="span7">
         <%= render :partial => 'dca_text/welcome' %>
-
+      </div>
+      <div class="span9">
         <%= render :partial => "dca_text/collections" %>
       </div>
 
+
     </div>
+
   </div>
 </div>
