--- a/app/views/dca_text/_collections.html.erb
+++ b/app/views/dca_text/_collections.html.erb
@@ -1,51 +1,57 @@
 <h2>Explore Featured Exhibits & Collections</h2>
-
-<p>Do we want to talk about the number of collections to start with? Maybe 3 instead of 6?</p>
 <ul class="thumbnails">
-  <li class="span3">
-    <div class="thumbnail">
-      <img src="http://placehold.it/260x180" alt="">
-
-      <div class="caption">
-        <h5>Karate & Ice Cream</h5>
-
-        <p>Pecans and Peanuts</p>
-
-        <p><a href="#" class="btn primary">Go</a></p>
-      </div>
-    </div>
-  </li>
-  <li class="span3">
-    <div class="thumbnail">
-      <img src="http://placehold.it/260x180" alt="">
-
-      <div class="caption">
-        <h5>Maps of Boston streets</h5>
-
-        <p>Still, no street signs.</p>
-
-        <p><a href="#" class="btn primary">Go</a></p>
-      </div>
-    </div>
-  </li>
-  <li class="span3">
-    <div class="thumbnail">
-      <img src="http://placehold.it/260x180" alt="">
-
-      <div class="caption">
-        <h5>Etchings & Rascals!</h5>
-
-        <p>Circus Parades!</p>
-
-        <p><a href="#" class="btn primary">Go</a></p>
-      </div>
-    </div>
-  </li>
-</ul>
-<div class="pull-right"><a href="#">View more featured exhibits!</a></div>
-<br/>
-
-<h2>Maintenance</h2>
-
-<p>Upgrades to the Tufts Digital Library are schedule for THursday, 9 - 9:30 AM. The digital library may not be
-  available during this time.</p>
+        <li class="span3">
+          <div class="thumbnail">
+           <a href="#"><img src="/assets/img/aloneintheeast-tuhome.jpg" alt=""></a>
+            <div class="caption">
+               <a href="#"><h5>Tufts and local history</h5></a>
+                 
+              
+            </div>
+          </div>  
+        </li>
+<li class="span3">
+          <div class="thumbnail">
+           <a href="#"><img src="/assets/img/escholar-tuhome.jpg" alt=""></a>
+            <div class="caption">
+              <a href="#"><h5>E-scholarship</h5></a>
+            </div>
+          </div>
+ </li>
+ 
+ <li class="span3">
+          <div class="thumbnail">
+            <a href="#"><img src="/assets/img/murrow-tuhome.jpg" alt=""></a>
+            <div class="caption">
+            <a href="#"><h5>Edward R. Murrow collection</h5></a>
+            </div>
+          </div> 
+ </li>
+      
+<li class="span3">
+          <div class="thumbnail">
+            <a href="#"><img src="/assets/img/wriston-tuhome.jpg" alt=""></a>
+            <div class="caption">
+              <a href="#"><h5>Walter B. Wriston collection</h5></a>
+              
+            </div>
+          </div>
+ </li>
+ <li class="span3">
+          <div class="thumbnail">
+            <a href="#"><img src="/assets/img/prussia-tuhome-temp.jpg" alt=""></a>
+            <div class="caption">
+             <a href="#"><h5>A new nation votes</h5></a>
+              
+            </div>
+          </div>
+ </li>
+ <li class="span3">
+          <div class="thumbnail">
+            <a href="#"><img src="/assets/img/drummers-tuhome.jpg" alt=""></a>
+            <div class="caption">
+              <a href="#"><h5>Dagomba Dance Drumming</h5></a>
+            </div>
+          </div> 
+ </li>
+ </ul>
