--- a/app/views/dca_text/_search_tips.html.erb
+++ b/app/views/dca_text/_search_tips.html.erb
@@ -1,9 +1,4 @@
 <h4>Basic Search Tips</h4>
 
-<p>Example body text. You can use Simple Search
-  <a rel="tooltip" href="#" data-original-title="first tooltip">you probably</a> to find a document by symbol
-  number or title. Simply enter a title or symbol number and the matching documents will be returned. The search
-  engine knows that certain parts of the <a title="Another tooltip" rel="tooltip" href="#">have a</a> documents
-  in the library--titles, symbol numbers, and so on--are important. Search results that match those special
-  <a title="Another one here too" rel="tooltip" href="#">really ironic</a> fields will be ranked higher than
-  ordinary search results.</p>
+<p>Type some keywords, an author's name, or some other search term in the search box above. You can search for a title or a specific phrase from a document by surrounding it.with quotation marks  Using the facets on the left-hand side of the page, you can filter your results by date, creator, subject, and more.</p>
+<p>Alternately, you can just use the facets to browse without entering any search terms.</p>
