--- a/app/views/dca_text/_welcome.html.erb
+++ b/app/views/dca_text/_welcome.html.erb
@@ -1,15 +1,5 @@
 <h2>Welcome to the digital library!</h2>
 <div id="lipsum2">
-  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras porta, mi ut sollicitudin laoreet, nisl enim ornare
-    erat, quis fringilla dui elit sit amet velit. Sed sit amet dui in nisl commodo faucibus. In hac habitasse platea
-    dictumst. Donec suscipit sodales mi, et placerat est commodo quis. Class aptent taciti sociosqu ad litora torquent
-    per conubia nostra, per inceptos himenaeos. Aliquam erat volutpat. Vivamus ut gravida arcu. Lorem ipsum dolor sit
-    amet, consectetur adipiscing elit. </p>
-
-  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras porta, mi ut sollicitudin laoreet, nisl enim ornare
-    erat, quis fringilla dui elit sit amet velit. Sed sit amet dui in nisl commodo faucibus. In hac habitasse platea
-    dictumst. Donec suscipit sodales mi, et placerat est commodo quis. Class aptent taciti sociosqu ad litora torquent
-    per conubia nostra, per inceptos himenaeos. Aliquam erat volutpat. Vivamus ut gravida arcu. Lorem ipsum dolor sit
-    amet, consectetur adipiscing elit. </p>
-
+  <p> The Tufts Digital Library is a place to explore and discover Tufts' research and teaching online. Collections include faculty and student scholarship, photograph and image collections, oral histories, student and university publications, and more. Explore using the links below or browse our collections.
+     </p>
 </div>
