--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -9,7 +9,6 @@
 
   <!-- Le styles -->
   <link href="/assets/css/bootstrap.css" rel="stylesheet">
-  <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
   <link href="/assets/css/facets.css" rel="stylesheet">
 
   <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -18,54 +17,51 @@
   <![endif]-->
 
   <!-- Le fav and touch icons -->
-  <style type="text/css">
-          /* Override some defaults */
-      html, body {
-          background: rgb(206, 220, 231); /* Old browsers */
-          background: -moz-radial-gradient(center, ellipse cover, rgba(206, 220, 231, 1) 0%, rgba(89, 106, 114, 1) 100%); /* FF3.6+ */
-          background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(206, 220, 231, 1)), color-stop(100%, rgba(89, 106, 114, 1))); /* Chrome,Safari4+ */
-          background: -webkit-radial-gradient(center, ellipse cover, rgba(206, 220, 231, 1) 0%, rgba(89, 106, 114, 1) 100%); /* Chrome10+,Safari5.1+ */
-          background: -o-radial-gradient(center, ellipse cover, rgba(206, 220, 231, 1) 0%, rgba(89, 106, 114, 1) 100%); /* Opera 12+ */
-          background: -ms-radial-gradient(center, ellipse cover, rgba(206, 220, 231, 1) 0%, rgba(89, 106, 114, 1) 100%); /* IE10+ */
-          background: radial-gradient(center, ellipse cover, rgba(206, 220, 231, 1) 0%, rgba(89, 106, 114, 1) 100%); /* W3C */
-          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#cedce7', endColorstr = '#596a72', GradientType = 1); /* IE6-9 fallback on horizontal gradient */
+  <!-- Le fav and touch icons -->
+     <style type="text/css">
+      /* Override some defaults */
+      html, body {background: rgb(206,220,231); /* Old browsers */
+background: -moz-radial-gradient(center, ellipse cover,  rgba(206,220,231,1) 0%, rgba(89,106,114,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(206,220,231,1)), color-stop(100%,rgba(89,106,114,1))); /* Chrome,Safari4+ */
+background: -webkit-radial-gradient(center, ellipse cover,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-radial-gradient(center, ellipse cover,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* Opera 12+ */
+background: -ms-radial-gradient(center, ellipse cover,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* IE10+ */
+background: radial-gradient(center, ellipse cover,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', endColorstr='#596a72',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+	  }
+.container > .content {
+        background-color: #fff;
+        padding: 10px 20px 20px 20px;
+margin-top: 0px;
+margin-bottom: 0px;
+margin-right: 10px;
+margin-left: 10px;
+        -webkit-border-radius: 0 0 6px 6px;
+        -moz-border-radius: 0 0 6px 6px;
+         border-radius: 0 0 6px 6px;
+        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+        -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+        box-shadow: 0 1px 2px rgba(0,0,0,.15);
       }
-
-      .container > .content {
-          background-color: #fff;
-          padding: 10px 20px 20px 20px;
-          margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-          -webkit-border-radius: 0 0 6px 6px;
-          -moz-border-radius: 0 0 6px 6px;
-          border-radius: 0 0 6px 6px;
-          -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
-          -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
-          box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
-      }
-
-      @media (min-width: 400px) and (max-width: 799px) {
-
-      {
-      .container > .content {
-                  background-color:   #FFFFFF;
-                  border-bottom-left-radius:   6px;
-                  border-bottom-right-radius:   6px;
-                  border-top-left-radius:   0;
-                  border-top-right-radius:   0;
-                  box-shadow:   0 1px 2px rgba(0, 0, 0, 0.15);
-                  margin-bottom:   0;
-                  margin-left:   -20px;
-                  margin-right:   -20px;
-                margin-top: -20px;
-                  padding-bottom:   20px;
-                  padding-left:   20px;
-                  padding-right:   20px;
-                  padding-top:   10px;
-      }
-
-          }
-  </style>
-
+/* @media (min-width: 499px) and (max-width: 799px) {
+{.container > .content {
+    background-color: #FFFFFF;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+    margin-bottom: 0;
+    margin-left: -20px;
+    margin-right: -20px;
+    margin-top: -20px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+    padding-right: 20px;
+    padding-top: 10px;
+}
+}	   */
+      </style>
   <link rel="shortcut icon" href="/assets/ico/favicon.ico">
   <%= raw(render_head_content) %>
 </head>
