--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -1,11 +1,11 @@
 /*!
- * Bootstrap v2.0.1
- *
+ * Altered by Cole Latimer for Tufts University Digital Library: This version is hosted on my personal site for testing and display purposes only.
+ * Bootstrap v2.0.1 
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
  * http://www.apache.org/licenses/LICENSE-2.0
  *
- * Designed and built with all the love in the world @twitter by @mdo and @fat.
+ * 
  */
 article,
 aside,
@@ -264,7 +264,7 @@ a:hover {
   width: 99.99999998999999%;
 }
 .container {
-  width: 1025px;
+  width: 1024px;
   margin-left: auto;
   margin-right: auto;
   *zoom: 1;
@@ -411,7 +411,8 @@ dt, dd {
 dt {
 	color:#000000;
   font-weight: normal;
-   margin-left: 15px;
+   margin-left: 20px;
+   margin-bottom: 15px;
 }
 dd {
 	color:#333;
@@ -419,9 +420,9 @@ dd {
   font-weight:300;
 }
 hr {
-  margin: 18px 0;
+  margin: 10px 0;
   border: 0;
-  border-top: 1px solid #eeeeee;
+  border-top: 1px solid #999999;
   border-bottom: 1px solid #ffffff;
 }
 strong {
@@ -871,10 +872,10 @@ input:focus:required:invalid:focus, textarea:focus:required:invalid:focus, selec
   color: #999999;
 }
 .help-block {
-  display: block;
-  margin-top: 5px;
-  margin-bottom: 0;
-  color: #999999;
+    color: #999999;
+    display: block;
+    margin-bottom: 20px;
+    margin-top: -10px;
 }
 .help-inline {
   display: inline-block;
@@ -1020,7 +1021,7 @@ input:focus:required:invalid:focus, textarea:focus:required:invalid:focus, selec
   vertical-align: middle;
 }
 .control-group {
-  margin-bottom: 9px;
+  margin-bottom: 15px;
 }
 legend + .control-group {
   margin-top: 18px;
@@ -1034,7 +1035,9 @@ legend + .control-group {
   display: table;
   content: "";
 }
-.form-horizontal .control-group:after {
+.form-horizontal ..control-group {
+    margin-bottom: 9px;
+}:after {
   clear: both;
 }
 .form-horizontal .control-label {
@@ -1198,7 +1201,7 @@ table .span12 {
   *margin-left: 0;
 }
 .icon-white {
-  background-image: url("/assets/img/glyphicons-halflings-white.png");
+  background-image: url("../img/glyphicons-halflings-white.png");
 }
 .icon-glass {
   background-position: 0      0;
@@ -1666,9 +1669,9 @@ table .span12 {
   border-radius: 4px;
 }
 .well {
-  min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
+  min-height: 15px;
+  padding: 15px;
+  margin-bottom: 10px;
   background-color: #f5f5f5;
   border: 1px solid #eee;
   border: 1px solid rgba(0, 0, 0, 0.05);
@@ -2462,7 +2465,11 @@ button.btn.small, input[type="submit"].btn.small {
   .blue-footer {
         background-color: #6699cc;
         padding: 20px 20px 10px;
-        margin: -20px -20px 20px;
+margin-top: -20px;
+margin-bottom: 20px;
+margin-right: 10px; 
+margin-left: 10px;
+
 		 -webkit-border-radius: 0 0 6px 6px;
         -moz-border-radius: 0 0 6px 6px;
          border-radius: 0 0 6px 6px;
@@ -3212,6 +3219,7 @@ a.thumbnail:hover {
 .thumbnail .caption {
   padding: 9px;
 }
+
 .label {
   padding: 2px 4px 3px;
   font-size: 11.049999999999999px;
@@ -3405,7 +3413,7 @@ a.thumbnail:hover {
 /* Subnav */
 .subnav {
     min-height: 40px;
-	margin-bottom: 30px;
+	margin-bottom: 20px;
     padding-bottom: 0;
     padding-left: 0;
     padding-right: 10px;
