--- a/public/assets/css/facets.css
+++ b/public/assets/css/facets.css
@@ -11,15 +11,25 @@
 	/*Menu Setup*/
 	#menu ul{padding:0; margin:0; width:180px;}
 	#menu ul ul{border:1px solid #CCC;overflow:hidden;}
-	#menu ul.navmenu li {margin:0; list-style:none;float:left;}
+	#menu ul.navmenu li {margin:0; list-style:none;float:left; color: #D3CAC5;}
 	#menu ul.navmenu li li {float:none;}
 	/*Links*/
-	#menu ul.navmenu a, #menu ul.navmenu a:visited {text-decoration:none; padding:5px; display:block; color:#008FDD;}
+	#menu ul.navmenu a, #menu ul.navmenu a:visited {text-decoration:none; padding:5px; display:inline-block; color:#008FDD;}
 	#menu ul.navmenu ul.submenu a:hover{background:#c4e0f5; color:#333;}
 	/*Heading Outer div*/
 	#menu ul.navmenu .menutop{border:1px solid #CCC; border-width:0 1px; overflow:hidden; width:180px; background:#F9F9F9; }
 	/*Header Links*/
-	#menu ul.navmenu .menutop a{width:150px;float:left;margin:0 0 1px 0; border-top:1px solid white;}
+	#menu ul.navmenu .menutop a  {border-top-color: white;
+    border-top-style: solid;
+    border-top-width: 1px;
+    color: #300F00;
+    float: left;
+    margin-bottom: 1px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    width: 150px;
+}
 	/*Header Link Hover*/
 	#menu ul.navmenu .menutop a:hover{color:#333;}
 	/*Removes white border for the first header*/
@@ -33,3 +43,12 @@
 	#menu ul.navmenu li:last-child .menutop{border-width:0px 1px 1px 1px; -moz-border-radius:0 0 5px 5px; -webkit-border-bottom-left-radius:5px;-webkit-border-bottom-right-radius:5px;}
 	#menu ul.navmenu li:last-child ul.submenu{-moz-border-radius:0 0 5px 5px;-webkit-border-bottom-left-radius:5px;-webkit-border-bottom-right-radius:5px;}
 	#menu ul.navmenu li:last-child .menutop-open{-moz-border-radius:0;-webkit-border-radius:0px; border-width:0 1px;}
+    .facet_select
+    {
+        display:inline;
+        text-align: left;
+    }
+    .facet_count
+    {
+        display:inline;
+    }
