--- a/app/views/catalog/_results.html.erb
+++ b/app/views/catalog/_results.html.erb
@@ -19,19 +19,20 @@
       <%= render 'constraints', :localized_params => params %>
       <div class="span9">
 
-
+        <h2>Search Results</h2>
         <div class="pageEntriesInfo">
           <%= render_pagination_info @response, :entry_name => 'item' %>
           <% if false %>
           <%= link_to "start over", catalog_index_path, :id => "startOverLink" %>
           <% end %>
         </div>
+        <br/>
 
         <%= render 'sort_and_per_page' %>
-
+        <% if false %>
         <%= render 'results_pagination' %>
-
-        <%= render :partial => 'document_list' %>
+        <% end %>
+        <%= render :partial => 'document_list', :response => 'rsolr_response' %>
 
 
 
