EAD internal page now shows items contained in files/folders (ie, c03 children of c02 elements and c04 children of c03 elements).

--- a/public/stylesheets/tdl.css
+++ b/public/stylesheets/tdl.css
@@ -137,6 +137,16 @@ input#submit {
   padding-right: 2em;
 }
 
+.ead_table_of_contents {
+  width: 200px;
+  float: right;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #cccccc;
+  padding-left: .25em;
+  padding-right: .25em;
+}
+
 /* Navigation */
 
 nav {
