--- a/app/views/tufts_faculty_publications/_image_pane.html.erb
+++ b/app/views/tufts_faculty_publications/_image_pane.html.erb
@@ -1,7 +1,7 @@
 <ul class="thumbnails">
   <li class="span6">
     <a class="thumbnail" href="#">
-      <%= showImage(params[:id]) %>
+      <%= showPdfImage(params[:id]) %>
     </a>
     <br>
     <p><%= render_book_viewer_link(params[:id]) %></p>
