--- a/app/views/tufts_voting_records/_show.html.erb
+++ b/app/views/tufts_voting_records/_show.html.erb
@@ -1,30 +1,29 @@
-<% javascript_includes << ['custom', {:plugin=>:hydra_repository, :media=>"all"}] %>
-<% javascript_includes << ["catalog/show", {:plugin=>:hydra_repository, :media=>"all"}] %>
-<% javascript_includes << "feedback.js" %>
-<% stylesheet_links << "feedback/feedback.css" %>
+<!--
+   Everything in the template within but not including the div class=content
+   goes in the _show.html.erb partial
 
-        <div class="document_viewer" id="cover_container">
-          <%= showMetadataItem("Creator", "creator", :creator) %>
-          <%= showMetadataItem("Source", "source2", :source2) %>
-          <%= showMetadataItem("Description", "description", :description) %>
-          <%= showMetadataItem("Date Created", "dateCreated", :dateCreated) %>
-          <%= showMetadataItem("Date Available", "dateAvailable", :dateAvailable) %>
-          <%= showMetadataItem("Date Issued", "dateIssued", :dateIssued) %>
-          <%= showMetadataItem("Citable URL", "identifier", :identifier) %>
-          <%= showMetadataItem("Rights", "rights", :rights) %>
-          <%= showMetadataItem("Citation", "bibliographicCitation", :bibliographicCitation) %>
-          <%= showMetadataItem("Publisher", "publisher", :publisher) %>
-          <%= showMetadataItem("Type", "type2", :type2) %>
-          <%= showMetadataItem("Format", "format2", :format2) %>
-          <%= showMetadataItem("Person Name", "persname", :persname) %>
-          <%= showMetadataItem("Organizations", "corpname", :corpname) %>
-          <%= showMetadataItem("Places", "geogname", :geogname) %>
-          <%= showMetadataItem("Topics", "subject", :subject) %>
-          <%= showMetadataItem("Funder", "funder", :funder) %>
-          <%= showMetadataItem("Temporal", "temporal", :temporal) %>
-          <%= showMetadataItem("Resolution", "resolution", :resolution) %>
-          <%= showMetadataItem("Bit Depth", "bitDepth", :bitDepth) %>
-          <%= showMetadataItem("Color Space", "colorSpace", :colorSpace) %>
-          <%= showMetadataItem("File Size", "filesize", :filesize) %>
-          <%= showFeedbackForm(params[:id]) %>
-     </div>
+   Bootstrap Grid system: http://twitter.github.com/bootstrap/scaffolding.html
+   Bootstrap Base CSS: http://twitter.github.com/bootstrap/base-css.html
+   Elections Records Landing Page Spec : https://wikis.uit.tufts.edu/confluence/display/DCAProjects/Election+Records+landing+page+spec
+-->
+
+<div class="row">
+  <div class="span12">
+    <h2><%= show_title() %></h2>
+  </div>
+</div>
+
+<hr>
+
+<div class="row">
+  <div class="span6">
+    <br>
+    <center><img alt="" src="/assets/img/elections.png"></center>
+  </div>
+  <div class="span6">
+    <div class="tooltip-demo well "><p>View voting record:</p>
+      <h5><a href="#"><%= show_title() %></a> <i class="icon-arrow-right margintoparrow"> </i></h5>
+          Short description of election records and portal.
+    </div>
+  </div>
+</div>
