--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -1,5 +1,3 @@
-<%= render :partial => 'shared/search_bar' %>
-
 <!-- LEFT SIDE/ FOR FLUID COLUMN TITLE ROW -->
 <div class="row-fluid">
   <div class="span12">
@@ -18,7 +16,20 @@
       <div class="span9">
         <%= render :partial => "dca_text/collections" %>
       </div>
+      <div class="pull-right"><a href="#">
+        <h5>View more featured exhibits and collections <i class="icon-arrow-right margintoparrow"> </i></h5></a>
+      </div>
 
+      <br/>
+
+      <div class="span7">
+
+        <h4>Availability</h4>
+
+        <p>Upgrades to the Tufts Digital Library are scheduled for Thursdays 9-9:30 AM. The digital library may not be
+          available during this time.</p>
+
+      </div>
 
     </div>
 
