--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -19,50 +19,54 @@
 
   <!-- Le fav and touch icons -->
   <!-- Le fav and touch icons -->
-     <style type="text/css">
-      /* Override some defaults */
-      html, body {background: rgb(206,220,231); /* Old browsers */
-background: -moz-radial-gradient(center, ellipse cover,  rgba(206,220,231,1) 0%, rgba(89,106,114,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(206,220,231,1)), color-stop(100%,rgba(89,106,114,1))); /* Chrome,Safari4+ */
-background: -webkit-radial-gradient(center, ellipse cover,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-radial-gradient(center, ellipse cover,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* Opera 12+ */
-background: -ms-radial-gradient(center, ellipse cover,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* IE10+ */
-background: radial-gradient(center, ellipse cover,  rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', endColorstr='#596a72',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-	  }
-.container > .content {
-        background-color: #fff;
-        padding: 10px 20px 20px 20px;
-margin-top: 0px;
-margin-bottom: 0px;
-margin-right: 10px;
-margin-left: 10px;
-        -webkit-border-radius: 0 0 6px 6px;
-        -moz-border-radius: 0 0 6px 6px;
-         border-radius: 0 0 6px 6px;
-        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-        -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-        box-shadow: 0 1px 2px rgba(0,0,0,.15);
+  <style type="text/css">
+          /* Override some defaults */
+      html, body {
+          background: rgb(206, 220, 231); /* Old browsers */
+          background: -moz-radial-gradient(center, ellipse cover, rgba(206, 220, 231, 1) 0%, rgba(89, 106, 114, 1) 100%); /* FF3.6+ */
+          background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(206, 220, 231, 1)), color-stop(100%, rgba(89, 106, 114, 1))); /* Chrome,Safari4+ */
+          background: -webkit-radial-gradient(center, ellipse cover, rgba(206, 220, 231, 1) 0%, rgba(89, 106, 114, 1) 100%); /* Chrome10+,Safari5.1+ */
+          background: -o-radial-gradient(center, ellipse cover, rgba(206, 220, 231, 1) 0%, rgba(89, 106, 114, 1) 100%); /* Opera 12+ */
+          background: -ms-radial-gradient(center, ellipse cover, rgba(206, 220, 231, 1) 0%, rgba(89, 106, 114, 1) 100%); /* IE10+ */
+          background: radial-gradient(center, ellipse cover, rgba(206, 220, 231, 1) 0%, rgba(89, 106, 114, 1) 100%); /* W3C */
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#cedce7', endColorstr = '#596a72', GradientType = 1); /* IE6-9 fallback on horizontal gradient */
       }
-/* @media (min-width: 499px) and (max-width: 799px) {
-{.container > .content {
-    background-color: #FFFFFF;
-    border-bottom-left-radius: 6px;
-    border-bottom-right-radius: 6px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-    margin-bottom: 0;
-    margin-left: -20px;
-    margin-right: -20px;
-    margin-top: -20px;
-    padding-bottom: 20px;
-    padding-left: 40px;
-    padding-right: 20px;
-    padding-top: 10px;
-}
-}	   */
-      </style>
+
+      .container > .content {
+          background-color: #fff;
+          padding: 10px 20px 40px 20px;
+          margin-top: 0px;
+          margin-bottom: 0px;
+          min-height: 400px;
+
+          /*margin-right: 10px;
+    margin-left: 10px;/*
+            -webkit-border-radius: 0 0 6px 6px;
+            -moz-border-radius: 0 0 6px 6px;
+             border-radius: 0 0 6px 6px;
+            -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+            -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+            box-shadow: 0 1px 2px rgba(0,0,0,.15);
+          }
+    /* @media (min-width: 499px) and (max-width: 799px) {
+    {.container > .content {
+        background-color: #FFFFFF;
+        border-bottom-left-radius: 6px;
+        border-bottom-right-radius: 6px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+        margin-bottom: 0;
+        margin-left: -20px;
+        margin-right: -20px;
+        margin-top: -20px;
+        padding-bottom: 20px;
+        padding-left: 40px;
+        padding-right: 20px;
+        padding-top: 10px;
+    }
+    }	   */
+  </style>
   <link rel="shortcut icon" href="/assets/ico/favicon.ico">
   <%= raw(render_head_content) %>
 </head>
@@ -71,7 +75,7 @@ margin-left: 10px;
 
 <!-- Navbar
 ================================================== -->
-<div class="navbar navbar-fixed-top">
+<div class="navbar">
   <div class="navbar-inner">
     <div class="container">
       <!--   <a class="brand" href="./index.html">Tufts Digital Library</a> -->
@@ -88,19 +92,25 @@ margin-left: 10px;
   <!-- <%= render :partial => '/user_util_links' %>      -->
 </div>
 
+<!-- HEADER -->
+<div class="headerbox">
+
+  <div class="page-header">
+
+
+    <%= link_to(image_tag('/assets/img/tuftsdigitallibrarylogosmall.png', :alt => "Tufts Digital Library logo"), catalog_path('/'), :class => "work") %>
+    <%- if "show" == @current_action -%>
+        <button href="#" class="btn btn-warning pull-right"> Comments about this page?
+          <i class="icon-comment icon-white"></i></button>
+    <%- end -%>
+
+  </div>
+</div>
+
+<%= render :partial => 'shared/subnav' %>
+
 <div class="container">
   <div class="content">
-    <!-- HEADER -->
-    <div class="page-header">
-
-
-      <%= link_to(image_tag('/assets/img/tuftsdigitallibrarylogosmall.png', :alt => "Tufts Digital Library logo"), catalog_path('/'), :class => "work") %>
-      <%- if "show" == @current_action -%>
-          <button href="#" class="btn btn-warning pull-right"> Comments about this page?
-            <i class="icon-comment icon-white"></i></button>
-      <%- end -%>
-
-    </div>
 
 
     <%= render :partial => '/flash_msg' %>
