--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -112,7 +112,7 @@
 <div class="container">
   <div class="content">
 
-
+    <div class="span12"></div>
     <%= render :partial => '/flash_msg' %>
     <%= yield %>
   </div>
